Organizando_arquivo_principal_e_Informacoes

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
     <h3>Meus Cursos</h3>
     <div class="container"> 
         <div class="course-card">
-            //tamanho das imagens 300 x 150\\
+            <!--tamanho das imagens 300 x 150-->
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuCbx8yJ_OTPJxGiJ4ZZbCwxqgD0-bn5vgGQ&s" alt="Matéria 1">
             <div class="course-content">
                 <h3><a href="#">Matéria 1</a></h3>
