Atualizaçõs de informações e  reoganização do projeto

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus Cursos</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'home.css') }}">
+    <title>Meus Cursos</title>  
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/home.css') }}">
 </head>
 <body>
     <h1>Olá, Aluno!</h1>
@@ -69,6 +69,6 @@
             </div>
         </div>
     </div>
-
+    <script src= "{{ url_for('static', filename = 'js/cru.js') }}"></script>
 </body>
 </html>
