--- a/templates/recuperar_senha.html
+++ b/templates/recuperar_senha.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"> <!-- Define o conjunto de caracteres como UTF-8 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Garante que o site seja responsivo, ajustando-se à largura da tela -->
   <title>Recuperar senha - AVA UNITEC</title> <!-- Define o título da página que aparece na aba do navegador -->
-  <link rel="stylesheet" href="{{url_for('static',filename = 'recuperar_senha.css')}}">
+  <link rel="stylesheet" href="{{url_for('static',filename = 'css/recuperar_senha.css')}}">
 </head>
 <body>
   <div>
