Criando páginas HTML e entendendo o Back-end

--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,7 @@
       <input type="text" placeholder="Login">
       <input type="password" placeholder="Senha">
       <button type="submit">Entrar</button>
+        <!-- Essa url_for é para uma função no back_end que está dentro de uma Blueprint-->
         <a href="{{url_for('recuperar_senha.recuperar_senha')}}">Esqueci minha Senha</a>
     </form>
   </div>
