--- a/templates/tela_materia.html
+++ b/templates/tela_materia.html
@@ -9,7 +9,7 @@
     
     <!-- Título da página que aparece na aba do navegador -->
     <title>Disciplina - Materiais e Atividades</title>
-    <link rel="stylesheet" href="tela_materia.css">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/tela_materia.css')}}">
 </head>
 <body>
     <!-- Cabeçalho com título principal -->
