--- a/templates/tela_atividades.html
+++ b/templates/tela_atividades.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Envio de Atividade</title>
-    <link rel="stylesheet" href="tela_atividade.css">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/tela_atividade.css')}}">
 </head>
 <body>
 
