--- a/static/css/tela_atividade.css
+++ b/static/css/tela_atividade.css
@@ -1,86 +1,127 @@
-       body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+body {
+    font-family: 'Arial', sans-serif;
+    background-color:  #edeeff;
     margin: 0;
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1030;
+}
+.nav {
+    flex: 1; 
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav ul {
+    list-style: none;
     padding: 0;
+    margin: 0;
+    display: flex; 
+    align-items: center;
 }
 
-.header {
-    background-color: #1841c7;
-    color: white;
-    padding: 10px;
-    text-align: center;
+.item {
+    margin: 0 15px; 
 }
 
+.link {
+    text-decoration: none;
+    color: #333;
+    font-weight: 500;
+}
+
+.item.ativo .link {
+    font-weight: bold;
+    color: #007bff;
+}
+
+.link:hover {
+    color: #0056b3;
+}
+
+.logo img {
+    width: 90px;
+    height: auto;
+    /* margin-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px; */
+}
 .container {
-    width: 80%;
-    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%; 
+    padding-top: 100px;
+    padding: 20px;
+    /* margin-top: 80px; */
+}
+.container1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%; 
+    padding-top: 100px;
+    padding: 20px;
+    /* margin-top: 80px; */
 }
 
 .titulo-atividade {
-    font-size: 24px;
-    margin-bottom: 20px;
-    color: #1841c7;
+    margin-top: 120px;
 }
 
 .box-detalhes {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    background: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 600px;
     margin-bottom: 20px;
-}
-
-.box-detalhes p {
-    margin: 10px 0;
 }
 
 .status-envio {
-    background-color: #ffeb3b;
-    padding: 15px;
     margin-bottom: 20px;
-    border-left: 5px solid #ffc107;
 }
 
-.status-envio p {
-    margin: 0;
+.btn-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 20px 0;
+}
+
+.btn, .file-button {
+    padding: 12px 30px;
+    background-color: #bc910a;
+    color: white;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.btn:hover, .file-button:hover {
+    background-color: #a76d0a;
+    transform: scale(1.05);
 }
 
 .caixa-texto {
-    width: 100%;
-    height: 100px;
-    margin-bottom: 15px;
+    width: 48%;
+    height: 80px;
     padding: 10px;
-    border-radius: 4px;
+    border-radius: 5px;
     border: 1px solid #ccc;
-    font-size: 16px;
+    margin-top: 20px;
 }
-
-.btn-selecionar {
-    display: block;
-    background-color: #1841c7;
-    color: white;
-    padding: 10px 20px;
-    margin-bottom: 10px;
-    text-align: center;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.btn-selecionar:hover {
-    background-color: #370a6d;
-}
-
-.btn-enviar {
-    background-color: #28a745;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-.btn-enviar:hover {
-    background-color: #218838;
-} 
